--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,9 @@
         // Visible label
         label: "Youtube",
         // Fields the user need to fill out when adding an instance of the component
-        fields: [{name: 'id', label: 'Youtube Video ID', widget: 'string'}],
+        fields: [
+            {name: 'id', label: 'Youtube Video ID', widget: 'string'}
+        ],
         // Pattern to identify a block as being an instance of this component
         pattern: /^youtube (\S+)$/,
         // Function to extract data elements from the regexp match
@@ -27,7 +29,7 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function(obj) {
-            return 'youtube ' + obj.id;
+            return `![](https://img.youtube.com/vi/${obj.id}/maxresdefault.jpg)`;
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
