netlify: improve youtube again

--- a/admin/index.html
+++ b/admin/index.html
@@ -17,7 +17,7 @@
         label: "Youtube",
         // Fields the user need to fill out when adding an instance of the component
         fields: [
-            {name: 'id', label: 'Youtube Video ID', widget: 'string'}
+            {name: 'url', label: 'Youtube Video URL', widget: 'string'}
         ],
         // Pattern to identify a block as being an instance of this component
         pattern: /^youtube (\S+)$/,
@@ -29,14 +29,15 @@
         },
         // Function to create a text block from an instance of this component
         toBlock: function(obj) {
-            return `![](https://img.youtube.com/vi/${obj.id}/maxresdefault.jpg)`;
+            const videoId = obj.url.match(/watch\?v=(.*)/)[1]
+            return `![${obj.url}](https://i3.ytimg.com/vi/${videoId}/maxresdefault.jpg)`
         },
         // Preview output for this component. Can either be a string or a React component
         // (component gives better render performance)
         toPreview: function(obj) {
             return (
                 '<img src="http://img.youtube.com/vi/' + obj.id + '/maxresdefault.jpg" alt="Youtube Video"/>'
-            );
+            )
         }
     });
     </script>
